suppliers on main fix

--- a/index.html
+++ b/index.html
@@ -143,62 +143,62 @@
 					<ul class="suppliers">
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/biskvit-shokolad.png" alt="ХАРКІВСЬКА БІСКВІТНА ФАБРИКА"></a>
+								<a href="suppliers-biskvit-shokolad.html"><img src="build/images/suppliers/biskvit-shokolad.png" alt="ХАРКІВСЬКА БІСКВІТНА ФАБРИКА"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/ekoniya.png" alt="ЕКОНІЯ"></a>
+								<a href="suppliers-econia.html"><img src="build/images/suppliers/ekoniya.png" alt="ЕКОНІЯ"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/ginger.png" alt="Джиджер"></a>
+								<img src="build/images/suppliers/ginger.png" alt="Джиджер">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/nash-sik.png" alt="Наш сік"></a>
+								<img src="build/images/suppliers/nash-sik.png" alt="Наш сік">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/jaffa.png" alt="Jaffa juice"></a>
+								<img src="build/images/suppliers/jaffa.png" alt="Jaffa juice">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/kvartet.png" alt="Квартет"></a>
+								<a href="suppliers-kvartet.html"><img src="build/images/suppliers/kvartet.png" alt="Квартет"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/ramonka.png" alt="Рамонка"></a>
+								<a href="suppliers-ramonka.html"><img src="build/images/suppliers/ramonka.png" alt="Рамонка"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/sergio.png" alt="Sergio"></a>
+								<a href="suppliers-sergio.html"><img src="build/images/suppliers/sergio.png" alt="Sergio"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ"></a>
+								<a href="suppliers-solodkiy-svit.html"><img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/teen-team.png" alt="Teen Team"></a>
+								<img src="build/images/suppliers/teen-team.png" alt="Teen Team">
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/vitmark.png" alt="Vitmark"></a>
+								<a href="suppliers-vitmark.html"><img src="build/images/suppliers/vitmark.png" alt="Vitmark"></a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="#"><img src="build/images/suppliers/cherkasy-hlib.png" alt="ЧеркасиХліб"></a>
+								<a href="suppliers-cherkasu-hlib.html"><img src="build/images/suppliers/cherkasy-hlib.png" alt="ЧеркасиХліб"></a>
 							</figure>
 						</li>
 					</ul>
