supplier text rewrite

--- a/suppliers.html
+++ b/suppliers.html
@@ -110,7 +110,7 @@
 								</figure>
 								<h2>Бісквіт-шоколад</h2>
 								<div class="info">
-									<p>Початком промислового виробництва кондитерських виробів в місті Харкові вважається 1896 рік, коли було засновано кондитерську фабрику Жоржа Бормана - видатного кондитера</p>
+									<p>Фабрика Жоржа Бормана - видатного кондитера була засновано у 1896 році, коли почалось промислове виробництво в місті Харків.</p>
 								</div>
 								<div class="btn-more">
 									<a href="suppliers-biskvit-shokolad.html">
