--- a/suppliers.html
+++ b/suppliers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Health Road | Health School Food</title>
+	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
 	<!--meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
@@ -110,7 +110,7 @@
 								</figure>
 								<h2>Бісквіт-шоколад</h2>
 								<div class="info">
-									<p>Фабрика Жоржа Бормана - видатного кондитера була засновано у 1896 році, коли почалось промислове виробництво в місті Харків.</p>
+									<p>Фабрика Жоржа Бормана - видатного кондитера, була засновано у 1896 році, коли почалось промислове виробництво в місті Харків.</p>
 								</div>
 								<div class="btn-more">
 									<a href="suppliers-biskvit-shokolad.html">
