--- a/contacts-school.html
+++ b/contacts-school.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Health Road | Health School Food</title>
+	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
 	<!--meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
