slider on products

--- a/products.html
+++ b/products.html
@@ -125,6 +125,7 @@
 									</ul>
 									<span class="arrow arrow-left hr-left-arrow"></span>
 									<span class="arrow arrow-right hr-right-arrow"></span>
+									<span class="counter-holder"></span>
 								</div>
 								<h2>Сік "Jaffa"</h2>
 								<ul class="futures-list-holder">
@@ -163,6 +164,7 @@
 									</ul>
 									<span class="arrow arrow-left hr-left-arrow"></span>
 									<span class="arrow arrow-right hr-right-arrow"></span>
+									<span class="counter-holder"></span>
 								</div>
 								<h2>Сік "Jaffa"</h2>
 								<ul class="futures-list-holder">
