slider, products, links

--- a/products.html
+++ b/products.html
@@ -179,6 +179,75 @@
 									<a href="#">Детальніше</a>
 								</div>
 							</article>
+							<article class="col product">
+								<div class="slider-holder">
+									<ul class="slider">
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-1.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-2.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-3.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-4.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-5.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-6.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-7.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-8.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-9.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-10.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-11.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-12.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-13.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-14.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-15.jpg" alt="cookie"></figure>
+										</li>
+										<li class="slide">
+											<figure><img src="build/images/products/kvartet/cookie-16.jpg" alt="cookie"></figure>
+										</li>
+									</ul>
+									<span class="arrow arrow-left hr-left-arrow"></span>
+									<span class="arrow arrow-right hr-right-arrow"></span>
+									<span class="counter-holder"></span>
+								</div>
+								<h2>Пряник "Міні-Джинджер"</h2>
+								<ul class="futures-list-holder">
+									<li>
+										<p><span>Серія:</span> професії</p>
+									</li>
+									<li>
+										<p><span>Вага:</span> 25гр.</p>
+									</li>
+								</ul>
+								<div class="btn-small">
+									<a href="#">Детальніше</a>
+								</div>
+							</article>
 						</div>
 					</div>
 				</section>
