--- a/products.html
+++ b/products.html
@@ -78,7 +78,7 @@
 							<li><a href="about.html">Про компанію</a></li>
 							<li><a href="project.html">Наш проект</a></li>
 							<li><a href="suppliers.html">Виробники</a></li>
-							<li class="active"><a href="products.html">Продукты</a></li>
+							<li class="active"><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
 					</nav>
