header private, auth, small fixes

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -94,7 +94,7 @@
 				</aside>
 				<section id="content-info-holder">
 					<h1>Нашим дітям – лише здорове харчування</h1>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Саме таким є гасло компанії «Дорога здоров’я». Вперше в Україні, ґрунтуючись на досвіді Британської організації UIF SM «The School Food Plan», ми запроваджуємо систему дитячого харчування за системою «Перекус-Обід-Перекус».</p>
 					<div class="snack-lunch-snack icons-hor">
 						<ul>
@@ -117,13 +117,13 @@
 						<p>Перекус-Обід-Перекус</p>
 					</div>
 					<h2>Наша головна мета</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Запровадження системи здорового дитячого харчування «Перекус-Обід-Перекус» у шкільних навчальних закладах України.</p>
 					<p>Разом з батьками школярів, ми вводимо в щоденний раціон дітей лише корисні продукти харчування, виключаючи чіпси, фаст-фуд, газовану воду та солодощі із забороненими консервантами та барвниками.</p>
 					<p>Діти повинні мати можливість харчуватись корисно у будь-який час, знаходячись у школі. Одного лише шкільного обіду не достатньо. Саме тому споживання корисних продуктів та напоїв має бути невід’ємною частиною денного раціону.</p>
 					<p>Впроваджуючи дану систему харчування, ми прививаємо дітям бажання вести здоровий спосіб життя, де корисне харчування займає одне з перших місць.</p>
 					<h2>Система корисного та здорового харчування «Перекус-Обід-Перекус» передбачає</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Встановлення у шкільних навчальних закладах вендінгових (торговельних) автоматів</p>
 					<div class="icons-hor">
 						<ul>
@@ -152,7 +152,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprt-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -170,7 +170,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprt-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -192,7 +192,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
