--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -106,7 +106,7 @@
 			<section class="outer project-holder">
 				<div class="inner">
 					<h2>Європейська система здорового шкільного харчування</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Чим харчується Ваша дитина? Ви можете проконтролювати використання кишенькових грошей? Європейська система здорового шкільного харчування – це не лише повноцінний обід, але й декілька перекусів корисними та свіжими продуктами, яких в шкільних буфетах найчастіше просто немає. Ми вирішуємо ці проблеми та пропонуємо якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета.</p>
 					<p>Повністю контролюйте щоденний раціон дитини за допомогою інформаційних повідомлень на мобільний телефон, встановлення ліміту на щоденні витрати та можливості встановити заборону на споживання певного виду продукції, якщо у вашої дитини є обмеження по здоров'ю.</p>
 					<p>Приєднуйтесь до європейської системи дитячого харчування вже сьогодні</p>
@@ -114,17 +114,17 @@
 						<ul>
 							<li>
 								<span class="hr-apple hr-large"></span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<p>Натуральні фруктові соки, кондитерські вироби, вода, свіжі фрукти – саме так буде виглядати перекус Вашої дитини у школі щоденно.</p>
 							</li>
 							<li>
 								<span class="hr-cards hr-large"></span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<p>Не потрібно давати кишенькові гроші, які дитина може витратити на фаст-фуд чи солодкі газовані напої. Поповнюйте браслет або картку і повністю контролюйте раціон своєї дитини.</p>
 							</li>
 							<li>
 								<span class="hr-save-money hr-large"></span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<p>Вся продукція надходить безпосередньо із заводів сертифікованих виробників продуктів дитячого харчування, що дозволяє залишати мінімальною вартість продукції</p>
 							</li>
 						</ul>
@@ -140,7 +140,7 @@
 			<section class="outer suppliers-holder">
 				<div class="inner">
 					<h2>Виробники</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<ul class="suppliers">
 						<li>
 							<figure>
@@ -208,25 +208,25 @@
 			<section class="outer questions-holder">
 				<div class="inner">
 					<h2>Три кроки до здорового харчування Вашої дитини</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<ul class="questions">
 						<li>
 							<span class="hr-get-card hr-small"></span>
-							<span class="separator-horizontal"></span>
+							<span class="sprtr-h"></span>
 							<h3>Як отримати картку або браслет</h3>
 							<p>Отримайте та заповніть анкету у школі, де навчається Ваша дитина. Здайте заповнену анкету представнику у школі та отримайте картку, або браслет.</p>
 							<a href="project-get-card.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-add-money hr-small"></span>
-							<span class="separator-horizontal"></span>
+							<span class="sprtr-h"></span>
 							<h3>Як поповнювати картку або браслет</h3>
 							<p>Поповнити картку або браслет можна у будь-якому відділенні банку або у відділенні Укрпошти.</p>
 							<a href="project-card-refill.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-use-hand hr-small"></span>
-							<span class="separator-horizontal"></span>
+							<span class="sprtr-h"></span>
 							<h3>Як користуватись вендінговим автоматом</h3>
 							<p>Достатньо обрати номер потрібного продукта на клавіатурі автомата, прикласти картку або браслет для зняття коштів, та отримати обраний продукт у вікні видачі автомата.</p>
 							<a href="project-how-to-use-vending-machine.html">докладніше<span class="long-arrow"></span></a>
@@ -241,7 +241,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -259,7 +259,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -281,14 +281,14 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
-								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
+								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-rule-required="true" data-mask="+38 (000) 000-0000">
 								<label for="entrance-user-phone"><span class="hr-phone"></span></label>
 							</div>
 							<div class="field-area">
-								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password">
+								<input type="password" name="user[password]" value="" placeholder="ваш пароль" id="entrance-user-password" data-rule-required="true">
 								<label for="entrance-user-password"><span class="hr-lock"></span></label>
 							</div>
 							<button type="submit">
