--- a/project-get-card.html
+++ b/project-get-card.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -99,7 +99,7 @@
 				</aside>
 				<section id="content-info-holder" class="advantage">
 					<h1>Як отримати картку або браслет</h1>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Браслет або картку «Дорога Здоров’я» ви можете отримати у будь-який момент поштою, заповнивши нашу анкету у школі, або на сайті нашої компанії.</p>
 					<p>Для отримання картки «Дорога Здоров’я», вам необхідно заповнити анкету та підписати угоду користувача (на зворотньому боці). Анкета буде знаходитись у конверті з нашою адресою. Після цього, вам достатньо кинути конверт у поштову скриньку, який знаходиться поблизу торговельного автомату, або у будь-яку поштову скриньку «Укрпошти».</p>
 					<p><span class="attention">Увага!</span> За відправку конверту на нашу адресу вже сплачено. Після отримання анкети, наша компанія відправить на вказану вами адресу  картку або браслет, інформаційні матеріали та інструкцію про поповнення вашого персонального рахунку. Карточка надійде вам вже активована. Вартість активації буде вирахувана з вашого карткового рахунку.</p>
@@ -110,7 +110,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -128,7 +128,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -150,7 +150,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
