--- a/project-vending-machines.html
+++ b/project-vending-machines.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -99,19 +99,19 @@
 				</aside>
 				<section id="content-info-holder" class="advantage">
 					<h2>Обслуговування автоматів</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Ми надаємо повний технічний супровід. Обслуговування включає: поповнення автомату високоякісною продукцією та перевірку справної роботи конструкції.</p>
 					<p>Наша технічні група гарантує мінімальний час очікування реакції спеціалістів у разі виникнення проблем з роботою автомату.</p>
 					<h2>Санітарне обслуговування</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Будь-який, навіть віддалено розташований апарат, обслуговується спеціалістом не менше 2-х разів у місяць. Постійне піклування про відповідність автоматів санітарним стандартам є гарантією високої якості продукції та безпеки для кожного клієнта.</p>
 					<h2>Технічне обслуговування</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Наша команда висококваліфікованих професійних техніків має необхідний набор інструментів та запасних деталей, що дозволяє виявити та усунути технічні проблеми швидко та ефективно. Уся процедура з обслуговування проводяться на місці, що гарантує високий рівень підтримки наших вендінгових автоматів.</p>
 					<p>Технічна підтримка знаходиться на відстані дзвінка. Кожного разу, коли виникає потреба у технічному обслуговуванні, наш кол-центр приймає виклик, а технічний відділ виїздить до вас. У результаті ретельного моніторингу та відслідковування вхідних дзвінків, ми підтримуємо високий рівень технічного обслуговування.</p>
 					<p>Ми проводимо регулярне навчання наших співробітників з ціллю забезпечення швидкої та ефективної підтримки торговельних автоматів.</p>
 					<h2>Контроль якості продукції</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Ми проводимо постійні опитування серед батьків та учнів, цікавлячись рівнем їх задоволення нашими послугами. Зворотній зв’язок допомагає нам знати, що думають люди, роблячи інформацію основою для подальшого вдосконалення системи.</p>
 				</section>
 			</div>
@@ -119,7 +119,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -137,7 +137,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -159,7 +159,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
