--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -99,7 +99,7 @@
 				</aside>
 				<section id="content-info-holder">
 					<h1>Наш проект</h1>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Компанія «Дорога Здоров’я» пропонує якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета.</p>
 					<p>Ті продукти, які дитина зможе самостійно купувати у вендінговому (торговельному) автоматі, ретельно підібрані дієтологами з урахуванням потреб дитячого організму.</p>
 					<p>На жаль, у більшості шкільних буфетів діти не мають змоги придбати корисні продукти харчування. Невідповідність продуктів нормам дитячого харчування, може призвести до появи захворювань: ожиріння, серцеві захворювання, хвороб шлункового-кишкового тракту та ін...</p>
@@ -124,7 +124,7 @@
 					</div>
 					<p><span class="attention">Увага!</span> Ви більше не будете видавати дитині кишенькові гроші, які можуть бути витрачені на чіпси, газовану солодку воду, цигарки, фаст-фуд та ін.. Гроші на особистому рахунку дитиною будуть витрачатись виключно на придбання продуктів харчування з вендінгового автомату, встановленого у школі.</p>
 					<h2>Європейський досвід</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<p>Європейська практика демонструє, що діти повинні, окрім повноцінного обіду, мати можливість у будь-який час перекусити. Особливо це важливо в тих випадках, коли діти залишаються у групі продовженого дня. Але це не мають бути напої та закуски, у складі яких є жир та цукор. Як приклад – досвід Великобританії в формуванні системи шкільного харчування</p>
 					<p>На початку 70-х років у Великобританії склалась повноцінна система шкільного харчування, яка була недорогою та схвалена більшістю школярів. Для дітей з низьким рівнем сімейного достатку вона була повністю безкоштовною.</p>
 					<p>В 1980 році у школах почали продавати буфетну продукцію: батончики, гамбургери, газовані напої та ін.. Вже через 20 років країна зіштовхнулась зі справжньою епідемією серцево-судинних захворювань, ожирінням та проблемами національного здоров’я, які були помічені практично у кожної людини.</p>
@@ -137,7 +137,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -155,7 +155,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -177,7 +177,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
