--- a/contacts-school.html
+++ b/contacts-school.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -96,13 +96,13 @@
 				</aside>
 				<section id="content-info-holder">
 					<h2>Київська область</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<div class="grid staff-holder">
 						<div class="row">
 							<div class="col">
 								<h2>Вероніка</h2>
 								<span>керуюча</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -117,7 +117,7 @@
 							<div class="col">
 								<h2>Ірина</h2>
 								<span>менеджер</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -132,7 +132,7 @@
 							<div class="col">
 								<h2>Наталія</h2>
 								<span>аккаунт-менеджер</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -147,13 +147,13 @@
 						</div>
 					</div>
 					<h2>Черкаська область</h2>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<div class="grid staff-holder">
 						<div class="row">
 							<div class="col">
 								<h2>Вероніка</h2>
 								<span>керуюча</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -168,7 +168,7 @@
 							<div class="col">
 								<h2>Ірина</h2>
 								<span>менеджер</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -183,7 +183,7 @@
 							<div class="col">
 								<h2>Наталія</h2>
 								<span>аккаунт-менеджер</span>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
@@ -203,7 +203,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -221,7 +221,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -243,7 +243,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
