--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -99,7 +99,7 @@
 						<div class="row">
 							<div class="col">
 								<h3>Графік роботи</h3>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<span class="icon hr-shedule"></span>
 								<div class="item">
 									<p><span>пн-пт</span> 9:00 - 18:00</p>
@@ -107,7 +107,7 @@
 							</div>
 							<div class="col">
 								<h3>Контакта інформація</h3>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<span class="icon hr-phone"></span>
 								<div class="item">
 									<a href="#">+38 (044) 999 9999</a>
@@ -119,7 +119,7 @@
 							</div>
 							<div class="col">
 								<h3>Адреса</h3>
-								<span class="separator-horizontal"></span>
+								<span class="sprtr-h"></span>
 								<span class="icon hr-pin"></span>
 								<div class="item">
 									<p>03002, м. Київ, вул. Ярославів Вал 13/2</p>
@@ -133,7 +133,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -151,7 +151,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -173,7 +173,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
