--- a/project-how-to-use-vending-machine.html
+++ b/project-how-to-use-vending-machine.html
@@ -48,7 +48,7 @@
 					<div class="btn-large">
 						<a href="#">Вхід для батьків</a>
 					</div>
-					<span class="separator-vertical"></span>
+					<span class="sprtr-v"></span>
 					<ul class="phones-holder">
 						<li>
 							<a href="tel:+380449999999"><span class="hr-mtc hr-small"></span>+38 (066) 539 3939</a>
@@ -99,7 +99,7 @@
 				</aside>
 				<section id="content-info-holder" class="advantage">
 					<h1>Як користуватися вендінговим автоматом</h1>
-					<span class="separator-horizontal"></span>
+					<span class="sprtr-h"></span>
 					<div class="movie-holder">
 						<div class="inner">
 							<iframe src="https://www.youtube.com/embed/wjLHQb86EUM?list=PLoraNLDNKLGuV026n83Qo649bC-ce_Iik" frameborder="0" allowfullscreen></iframe>
@@ -111,7 +111,7 @@
 				<div class="inner">
 					<div class="part contacts">
 						<h3>Контакти</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<ul>
 							<li>
 								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
@@ -129,7 +129,7 @@
 					</div>
 					<div class="part navigation">
 						<h3>Всі розділи</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<div class="list-holder">
 							<ul>
 								<li><a href="#">Головна</a></li>
@@ -151,7 +151,7 @@
 					</div>
 					<div class="part entrance">
 						<h3>Вхід для батьків</h3>
-						<span class="separator-horizontal"></span>
+						<span class="sprtr-h"></span>
 						<form action="#" method="POST" id="entrance-form">
 							<div class="field-area">
 								<input type="tel" name="user[phone]" value="" placeholder="+38 (044) 999 9999" id="entrance-user-phone" data-inputmask="'mask': '+38 (999) 999 9999'">
