--- a/kids-detailed.html
+++ b/kids-detailed.html
@@ -105,142 +105,22 @@
 					<div id="breadcrumbs">
 						<ul>
 							<li><a href="#">Личный кабинет<span class="hr-right-arrow"></span></a></li>
-							<li><a href="#">Дети</a></li>
+							<li><a href="#">Дети<span class="hr-right-arrow"></span></a></li>
+							<li><a href="#">Личные данные Сергея</a></li>
 						</ul>
 					</div>
 					<div class="outer scrollable-holder">
 						<div class="inner scrollable">
-							<div class="text-holder">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laborum sequi alias ea enim. Ab voluptas est perferendis illum nesciunt non quaerat voluptatibus, dicta deleniti ratione error fugit, dolor id!</p>
-							</div>
-							<div class="grid">
-								<div class="row">
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-male"></span>Сергей</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
-												<li>
-													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-female"></span>Мария</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
-												<li>
-													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
+							<article class="kid-holder">
+								<div class="title-holder">
+									<h2><span class="icon hr-male"></span>Сергей</h2>
+									<span class="sprtr-h"></span>
 								</div>
-								<div class="row">
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-male"></span>Сергей</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
-												<li>
-													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-female"></span>Мария</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
-												<li>
-													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
-								</div>
-							</div>
+							</article>
 						</div>
 					</div>
 					<div class="outer action-panel-holder">
-						<div id="pagination-holder">
-							<ul>
-								<li class="active"><a href="">1</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="">11</a></li>
-								<li><a href="">12</a></li>
-								<li><a href="">13</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="">21</a></li>
-							</ul>
-						</div>
+						
 					</div>
 				</section>
 			</div>
