--- a/private/authorization.html
+++ b/private/authorization.html
@@ -33,13 +33,13 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/auth.bundle.min.css">
+	<link rel="stylesheet" href="../build/css/auth.bundle.min.css">
 </head>
 <body>
 	<div id="page">
 		<header id="header">
 			<div class="inner">
-				<div class="logo"><a href="#"><img src="build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></a></div>
+				<div class="logo"><a href="#"><img src="../build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></a></div>
 				<div class="info-holder">
 					<ul class="langs-holder">
 						<li class="active"><a href="#">ua</a></li>
@@ -89,10 +89,10 @@
 			</section>
 		</main>
 	</div>
-	<script src="jspm_packages/system.js"></script>
-	<script src="jspm.config.js"></script>
+	<script src="../jspm_packages/system.js"></script>
+	<script src="../jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/auth");
+		System.import("../assets/js/app/auth");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
