--- a/private/kids-detailed.html
+++ b/private/kids-detailed.html
@@ -33,13 +33,13 @@
 	<link rel="icon" type="image/png" href="assets/images/favicons/96x96.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/160x160.png">
 	<link rel="icon" type="image/png" href="assets/images/favicons/192x192.png"-->
-	<link rel="stylesheet" href="build/css/kids.bundle.min.css">
+	<link rel="stylesheet" href="../build/css/kids.bundle.min.css">
 </head>
 <body>
 	<div id="page">
 		<header id="header">
 			<div class="inner">
-				<div class="logo"><a href="#"><img src="build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></a></div>
+				<div class="logo"><a href="#"><img src="../build/images/logo.png" alt="Дорога Здоров'я - здорове шкільне харчування"></a></div>
 				<div class="info-holder">
 					<ul class="langs-holder">
 						<li class="active"><a href="#">ua</a></li>
@@ -132,14 +132,13 @@
 										</div>
 										<div class="col">
 											<span><span class="icon hr-coin"></span>Суточный лимит</span>
-											<form action="php/limit.php" method="POST" id="limit-form">
+											<form action="../php/limit.php" method="POST" id="limit-form">
 												<p class="limit-preview" data-currency="UAH">100,00 UAH</p>
 												<input type="text" name="kid" value="100,00" placeholder="0.000,00" id="limit-input" data-mask="#.##0,00" data-mask-reverse="true" data-rule-required="true" data-msg-required="Обязательное поле">
 												<button type="submit">
 													<span class="icon hr-accept"></span>
 												</button>
 												<span class="error"></span>
-												<span class="change-limit">изменить лимит</span>
 												<div class="loader">
 													<span class="dot"></span>
 													<span class="dot"></span>
@@ -153,6 +152,9 @@
 									<div class="links-holder">
 										<a href="#"><span class="icon hr-stats"></span>Статистика заказов</a>
 										<a href="#"><span class="icon hr-cart"></span>Список продуктов</a>
+										<div class="btn-small" id="change-limit">
+											<span>Изменить дневной лимит</span>
+										</div>
 									</div>
 								</div>
 							</article>
@@ -162,10 +164,10 @@
 			</div>
 		</main>
 	</div>
-	<script src="jspm_packages/system.js"></script>
-	<script src="jspm.config.js"></script>
+	<script src="../jspm_packages/system.js"></script>
+	<script src="../jspm.config.js"></script>
 	<script>
-		System.import("assets/js/app/kids");
+		System.import("../assets/js/app/kids");
 	</script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
